src/objects/Sales_Form__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Insert_MSL_Id__c</fullName>
        <label>MSL Ad Insert Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MSL_Ad_Number__c</fullName>
        <label>MSL Ad Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Owner_Email__c</fullName>
        <formula>Recruitment_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruitment Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Owner_Phone__c</fullName>
        <formula>Recruitment_Owner__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruitment Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Owner_Title__c</fullName>
        <formula>IF(ISPICKVAL(Recruitment_Owner__r.Title__c, &quot;Other&quot;),
 Recruitment_Owner__r.Title_If_Other__c ,
TEXT(Recruitment_Owner__r.Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruitment Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Forms</relationshipLabel>
        <relationshipName>Sales_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <label>Salesperson</label>
        <picklist>
            <picklistValues>
                <fullName>Adrian Munro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aled Evans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Hughes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alison Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amar  Dhanjan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Rawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claire Neary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannah Dedman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jemima Greenacre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessica Marshall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jimmy Jobson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaan Ibrahim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martin Bennett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ross Mitchell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean Marsh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simon Thurston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Shillabeer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracy  Laverack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viv Aylward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sales Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salesperson_Name__c</columns>
        <columns>MSL_Ad_Number__c</columns>
        <columns>Ad_Insert_MSL_Id__c</columns>
        <columns>Recruitment_Owner__c</columns>
        <columns>Recruitment_Owner_Email__c</columns>
        <columns>Recruitment_Owner_Phone__c</columns>
        <columns>Recruitment_Owner_Title__c</columns>
        <columns>Sales_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Forms List</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{0000000000}</displayFormat>
        <label>Sales Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Forms</pluralLabel>
    <recordTypes>
        <fullName>Salesform_Locked</fullName>
        <active>true</active>
        <label>Salesform Locked</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ad_Insert_Id_OR_MSL_Ad_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK( Ad_Insert_MSL_Id__c ),
       ISBLANK(MSL_Ad_Number__c)
       ),
   AND(NOT(ISBLANK( Ad_Insert_MSL_Id__c )),
       NOT(ISBLANK(MSL_Ad_Number__c))
       )
)</errorConditionFormula>
        <errorMessage>Please fill out either the MSL Ad Insert Id or the MSL Ad Number. Note that you can only fill out one of each.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salesperson_Name_Req</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(Salesperson_Name__c) )</errorConditionFormula>
        <errorMessage>Please fill out the Salesperson Name.</errorMessage>
    </validationRules>
</CustomObject>